Update to AsciidoctorJ 2.x
Compiled result looks like before, next step is upgrade to 3.x! :)