@@ -1,25 +1,22 @@
 import org.asciidoctor.gradle.jvm.AsciidoctorTask
-
 import java.text.SimpleDateFormat
 
-buildscript {
-    allprojects {
-        repositories {
-            mavenCentral()
-            maven {
-                url "https://plugins.gradle.org/m2/"
-            }
-        }
-    }
-    dependencies {
-        classpath 'org.jruby:jruby-complete:9.2.19.0'
-        classpath 'org.asciidoctor:asciidoctorj:2.5.1'
-        classpath "org.asciidoctor:asciidoctorj-pdf:1.6.0"
-    }
-}
+
+//
+//dependencies {
+//    classpath "org.asciidoctor:asciidoctorj-pdf:2.0.4"
+//}
 
 plugins {
-    id "org.asciidoctor.jvm.convert" version "3.3.2"
+    id "org.asciidoctor.jvm.convert" version "2.4.0"
+    id "org.asciidoctor.jvm.pdf" version "2.4.0"
+}
+repositories {
+    mavenCentral()
+}
+
+asciidoctorj {
+    version = '1.6.2'
 }
 
 ext {
@@ -43,16 +40,10 @@ ext {
 
 class RenderCurriculumTask extends AsciidoctorTask {
     @Inject
-    RenderCurriculumTask(WorkerExecutor worker, String curriculumFileName, String versionDate, String language, boolean withRemarks) {
-        super(worker)
-
-//        inProcess = org.asciidoctor.gradle.base.process.ProcessMode.JAVA_EXEC
-
-        forkOptions {
-            jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
-        }
-
+    RenderCurriculumTask(WorkerExecutor we, String curriculumFileName, String versionDate, String language, boolean withRemarks) {
+        super(we)
         sourceDir = new File("./docs/")
+        baseDir = new File ("./docs/")
         sources {
             include "index.adoc"
             include "${curriculumFileName}.adoc"
@@ -62,28 +53,27 @@ class RenderCurriculumTask extends AsciidoctorTask {
             separateOutputDirs = false
             backends 'pdf', 'html5'
         }
+
         def fileVersion = project.version.trim() + "-" + language
 
-    def fileVersion = project.version.trim() + "-" + language
-
-    attributes = [
-      'icons'             : 'font',
-      'version-label'     : '',
-      'revnumber'         : fileVersion,
-      'revdate'           : versionDate,
-      'document-version'  : fileVersion + "-" + versionDate,
-      'currentDate'       : versionDate,
-      'language'          : language,
-      'withRemarks'       : withRemarks,
-      'curriculumFileName': curriculumFileName,
-      'debug_adoc'        : false,
-      'pdf-stylesdir'     : '../pdf-theme/themes',
-      'pdf-fontsdir'      : '../pdf-theme/fonts',
-      'pdf-style'         : 'isaqb',
-      'stylesheet'        : '../html-theme/adoc-github.css',
-      'stylesheet-dir'    : '../html-theme'
-    ]
-  }
+        attributes = [
+                'icons'             : 'font',
+                'version-label'     : '',
+                'revnumber'         : fileVersion,
+                'revdate'           : versionDate,
+                'document-version'  : fileVersion + "-" + versionDate,
+                'currentDate'       : versionDate,
+                'language'          : language,
+                'withRemarks'       : withRemarks,
+                'curriculumFileName': curriculumFileName,
+                'debug_adoc'        : false,
+                'pdf-stylesdir'     : '../pdf-theme/themes',
+                'pdf-fontsdir'      : '../pdf-theme/fonts',
+                'pdf-style'         : 'isaqb',
+                'stylesheet'        : '../html-theme/adoc-github.css',
+                'stylesheet-dir'    : '../html-theme'
+        ]
+    }
 }
 
 task buildDocs {
